...
		android:layout_height="match_parent"
		android:paddingBottom="@dimen/view_margin_small"
		android:scrollbars="vertical"
		app:layout_behavior="@string/appbar_scrolling_view_behavior"/>

	<androidx.recyclerview.widget.RecyclerView
		android:id="@+id/search_recycler_view"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:paddingTop="@dimen/view_margin_small"
		android:scrollbars="vertical"
		android:visibility="gone"
		app:layout_behavior="@string/appbar_scrolling_view_behavior"/>

	<com.google.android.material.floatingactionbutton.FloatingActionButton
		android:id="@+id/fab"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="bottom|end"
		android:layout_margin="@dimen/fab_margin"
		app:srcCompat="@drawable/ic_delete"/>

...
