...
		android:layout_height="match_parent"
		android:layout_gravity="center_vertical"
		android:contentDescription="@string/abc_searchview_description_search"
		android:focusable="true"/>

	<LinearLayout
		android:id="@+id/search_edit_frame"
		android:layout_width="0dp"
		android:layout_height="match_parent"
		android:layout_weight="1"
		android:layoutDirection="locale"
		android:orientation="horizontal">

...
			android:layout_gravity="center_vertical"
			android:scaleType="centerInside"
			android:visibility="gone"/>

		<!-- Inner layout contains the app icon, button(s) and EditText -->
		<LinearLayout
			android:id="@+id/search_plate"
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_gravity="center_vertical"
			android:layout_weight="1"
			android:orientation="horizontal">

...
