<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			  xmlns:tools="http://schemas.android.com/tools"
			  android:layout_width="match_parent"
			  android:layout_height="wrap_content"
			  android:gravity="center"
			  android:orientation="vertical"
			  android:paddingBottom="@dimen/text_margin">

	<TextView
		android:id="@+id/lblCompanyName"
		style="@style/Text.Title"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="start"
		tools:text="ALPHABET ACCOUNTANTS LTD"/>

	<TextView
		android:id="@+id/lblCompanyNumber"
		style="@style/Text"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="start"
		tools:text="789654123"/>

</LinearLayout>