<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
	  xmlns:app="http://schemas.android.com/apk/res-auto">
	<item android:id="@+id/action_search"
		  android:title="@string/search"
		  android:icon="@drawable/ic_search"
		  app:showAsAction="always|collapseActionView"
		  app:actionViewClass="androidx.appcompat.widget.SearchView" />
	<item android:id="@+id/action_favourites"
		  android:title="@string/favourites"
		  android:icon="@drawable/ic_favorite"
		  app:showAsAction="ifRoom" />
	<item
		android:id="@+id/action_filter"
		android:title="@string/search_menu_filter"
		android:icon="@drawable/ic_close_black"
		app:actionViewClass="android.widget.Spinner"
		app:showAsAction="always"/>
	<item
		android:id="@+id/action_privacy"
		android:title="@string/privacy_policy"
		app:showAsAction="never"/>
</menu>