<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="appbar_scrolling_view_behavior" translatable="false">	com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
	<string name="type">Type</string>
	<string name="date">Date</string>
	<string name="office_address">Office address</string>
	<string name="company_address_show_on_map">Show on map</string>
	<string name="filing_history">Filing history</string>
	<string name="charges">Charges</string>
	<string name="insolvency">Insolvency</string>
	<string name="officers">Officers</string>
	<string name="persons_with_significant_control">Persons with significant control</string>
	<string name="search_menu_filter">Filter</string>
	<string name="category">Category</string>
	<string name="subcategory">Subcategory</string>
	<string name="description">Description</string>
	<string name="pages">Pages</string>
	<string name="search">Search</string>
	<string name="officer_details_nationality">Nationality</string>
	<string name="officer_details_date_of_birth">Date of birth</string>
	<string name="officer_details_country_of_residence">Country of residence</string>
	<string name="officer_details_name">Name</string>

	<string name="officer_details_unknown">Unknown</string>
	<string name="insolvency_details_address">Address</string>
	<string name="company_name">Company name</string>
	<string name="company_status">Company status</string>

</resources>